# passiflora

./: .gitignore  Cargo.toml  README.md  flake.nix
db/: Dockerfile  init.sql  mock_data.sql
src/: auth.rs  db.rs  main.rs
src/routes/: files.rs  items.rs  users.rs
