[package]
name = "passiflora-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = "9.3.1"
password-hash = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
validator = "0.20.0"
